--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@fontsource/almarai": "^5.1.1",
     "@next/font": "^14.2.15",
     "@radix-ui/react-slot": "^1.1.1",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.3",
     "lucide-react": "^0.474.0",
     "next": "^15.1.6",
     "react": "^19.0.0",
